force-app/main/default/objects/leaseworks__Claim_SRER__c/leaseworks__Claim_SRER__c.object-meta.xml
<CustomObject>
    <description>Quick reference point of Supplemental Rent Event Requirement in a claim page
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Claims SRER</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims SRER</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>