force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Allocation_MPE_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Allocation_MPE_F__c</fullName>
    <description>Unchecked if Allocation override is entered</description>
    <formula>if( ISBLANK ( leaseworks__Maintenance_Event_Task__c )  ,false, IF(ISBLANK(leaseworks__Allocation_Override__c), true, false) )</formula>
    <inlineHelpText>Unchecked if Allocation override is entered</inlineHelpText>
    <label>Allocation from MPE</label>
    <type>Checkbox</type>
</CustomField>