force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Allocation_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Allocation_Override__c</fullName>
    <description>Enter reserves allocation if it is different from what is configured on MPE level</description>
    <inlineHelpText>Enter reserves allocation if it is different from what is configured on MPE level</inlineHelpText>
    <label>Allocation Override</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>