force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Claim__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>leaseworks__Claims__c</referenceTo>
    <relationshipLabel>Supplemental Rent Event Requirements</relationshipLabel>
    <relationshipName>Claims_SRER</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>