force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Maintenance_Event_Task__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Event_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Maintenance Program Event Task associated with this requirement. To be defined on the Maintenance Program Event level</description>
    <inlineHelpText>Maintenance Program Event Task associated with this requirement. To be defined on the Maintenance Program Event level</inlineHelpText>
    <label>Maintenance Event Tasks</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.leaseworks__Y_Hidden_MPE_LKP__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Maintenance_Event_Task__c.leaseworks__Maintenance_Program_Event__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.leaseworks__Y_Hidden_MPE_LKP__c</field>
            <operation>equals</operation>
            <value>Null</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Maintenance_Event_Task__c</referenceTo>
    <relationshipLabel>Claim SRER</relationshipLabel>
    <relationshipName>Claim_SRER</relationshipName>
    <type>Lookup</type>
</CustomField>