force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Y_Hidden_Key__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Key__c</fullName>
    <description>Allowing to create unique Supplemental Rent Event Requirement Task Name under same Supplemental Rent</description>
    <inlineHelpText>Allowing to create unique Supplemental Rent Event Requirement Task Name under same Supplemental Rent</inlineHelpText>
    <label>_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>