force-app/main/default/objects/leaseworks__Claim_SRER__c/fields/leaseworks__Y_Hidden_METCostEvntPrcntg__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_METCostEvntPrcntg__c</fullName>
    <label>_MET Cost Event Prcntg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>