force-app/main/default/objects/leaseworks__Claim_SRER__c/validationRules/leaseworks__Maintenance_Program_Event_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Maintenance_Program_Event_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(leaseworks__Y_Hidden_MPE_LKP__c) , NOT(ISBLANK( leaseworks__Maintenance_Event_Task__c )) )</errorConditionFormula>
    <errorDisplayField>leaseworks__Y_Hidden_MPE_LKP__c</errorDisplayField>
    <errorMessage>Complete this field for standard MPE task or keep this field blank for custom supplement rent event requirement</errorMessage>
</ValidationRule>